# test_goslam

./: README.md  commande_demo_stereo.sh  download_euroc.sh  env_slam.yml  evaluate_on_euroc.sh  evaluate_on_ivm.sh  installation_merdique.sh  run.py  test_dpviewer.py
ViewerDPVO/: CMakeLists.txt  setup.py
ViewerDPVO/pybind11/: CMakeLists.txt
ViewerDPVO/viewerdpvo/: CMakeLists.txt  viewer.cpp
configs/: go_slam.yaml
configs/EuRoC/: ivm.yaml
configs/IVM/: ivm.yaml
exps/goslam/euroc/MH_01_easy/test/: metrics_traj.txt
exps/goslam/euroc/MH_01_easy/test/checkpoints/: est_poses.npy
exps/goslam/euroc/MH_01_easy/test/logs/mapping/: log.txt
src/: backend.py  datasets.py  depth_video.py  factor_graph.py  frontend.py  motion_filter.py  slam.py  visualization.py  visualization_goslam.py  visualization_origin.py
src/geom/: projective_ops.py
